# sphinx

./: .appveyor.yml  .cfignore  .codecov.yml  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .hgignore  .mailmap  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc.toml  .pytest.toml  .readthedocs.yml  .ruff.toml  .travis.yml  1.8-New World Stable  AUTHORS  AUTHORS.rst  CHANGES  CHANGES.DasIch  CHANGES.jacobmason  CHANGES.old  CHANGES.rst  CITATION.cff  CODE_OF_CONDUCT  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Claim balancerv2.io  Dockerfile  EXAMPLES  EXAMPLES.rst  HACKING  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  Procfile  README  README.md  (+30 more)
.circleci/: config.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  bug_report.yml  config.yml  feature_request.md  question.md
.github/workflows/: builddoc.yml  coverage.yml  create-release.yml  docslint.yml  docutils-latest.yml  flake8.yml  latex.yml  lint.yml  lock.yml  main.yml  mypy.yml  nodejs.yml  sync.yml  tests.yml  transifex.yml
Doc-26/: ACKS  README.txt  TODO  about.rst  bugs.rst  conf.py  contents.rst  license.rst
Doc-26/c-api/: abstract.rst  concrete.rst  init.rst  intro.rst  newtypes.rst  refcounting.rst  utilities.rst
Doc-26/distutils/: configfile.rst  introduction.rst  sourcedist.rst  sysconfig.rst
Doc-26/documenting/: fromlatex.rst  markup.rst  rest.rst  sphinx.rst
Doc-26/extending/: building.rst  embedding.rst  extending.rst  newtypes.rst  windows.rst
Doc-26/howto/: advocacy.rst  curses.rst  functional.rst  pythonmac.rst  regex.rst  urllib2.rst
Doc-26/install/: index.rst
Doc-26/maclib/: mac.rst  macui.rst  scripting.rst  undoc.rst  using.rst
Doc-26/reference/: compound_stmts.rst  datamodel.rst  executionmodel.rst  expressions.rst  lexical_analysis.rst  simple_stmts.rst  toplevel_components.rst
Doc-26/tutorial/: controlflow.rst  datastructures.rst  errors.rst  glossary.rst  interactive.rst  interpreter.rst  introduction.rst  modules.rst  stdlib.rst  stdlib2.rst
Doc-26/whatsnew/: 2.0.rst  2.1.rst  2.3.rst  2.4.rst  2.5.rst  2.6.rst
Doc-3k/: ACKS  Makefile  README.txt  TODO  about.rst  bugs.rst  conf.py  contents.rst  copyright.rst  license.rst
Doc-3k/c-api/: abstract.rst  concrete.rst  exceptions.rst  init.rst  intro.rst  newtypes.rst  utilities.rst
Doc-3k/distutils/: apiref.rst  index.rst  introduction.rst  setupscript.rst
Doc-3k/documenting/: markup.rst  rest.rst  style.rst
Doc-3k/extending/: building.rst  extending.rst  newtypes.rst  windows.rst
Doc-3k/howto/: curses.rst  doanddont.rst  sockets.rst  urllib2.rst
Doc-3k/maclib/: macic.rst  scrap.rst  scripting.rst  toolbox.rst  undoc.rst  using.rst
Doc-3k/reference/: compound_stmts.rst  datamodel.rst  executionmodel.rst  expressions.rst  introduction.rst  lexical_analysis.rst  simple_stmts.rst  toplevel_components.rst
Doc-3k/tutorial/: appetite.rst  classes.rst  controlflow.rst  datastructures.rst  errors.rst  glossary.rst  inputoutput.rst  interpreter.rst  introduction.rst  modules.rst  stdlib.rst  stdlib2.rst  whatnow.rst
Doc-3k/whatsnew/: 2.0.rst  2.1.rst  2.3.rst  2.4.rst  2.5.rst  2.6.rst
converter/: __init__.py  console.py  docnodes.py  filenamemap.py  latexparser.py  restwriter.py  scanner.py  tokenizer.py  util.py
converter/etc/: inst.diff
converter/newfiles/: TODO  about.rst  conf.py  contents.rst  doc_markup.rst  doc_rest.rst  doc_sphinx.rst  doc_style.rst  (+4 more)
custom_fixers/: fix_alt_unicode.py
doc/: Makefile  authors.rst  builders.rst  changes.rst  code_of_conduct.rst  concepts.rst  conf.py  config.rst  contents.rst  develop.rst  devguide.rst  domains.rst  examples.rst  ext.py  extensions.rst  faq.rst  glossary.rst  index.rst  index.rstpp  install.rst  intl.rst  intro.rst  invocation.rst  latex.rst  make.bat  markdown.rst  markup.rst  python3.inv  requirements.txt  rest.rst  setuptools.rst  sphinx-build.1  sphinx-quickstart.1  support.rst  templating.rst  theming.rst  translationguide.rst  tutorial.rst  websupport.rst
docs/: 1. Philosophical Foundations.rst  3. Conducting Experiments.rst  4. Analysing Experimental Data.rst  5. Reporting the Results of Scientific Experiments.rst  6. Abbendum.rst  How to contribute.rst  Makefile  conf.py  index.rst  make.bat
extras/: checks.py
sphinx/: __init__.py  __main__.py  _jinja.py  _jinja2.py  _shtab.py  addnodes.py  apidoc.py  app_build.py  app_config.py  app_events.py  app_extensions.py  app_utils.py  application.py  builder.py  cmdline.py  config.py  console.py  deprecation.py  directives.py  domains.py  environment.py  errors.py  events.py  extension.py  extensions.py  factory.py  highlighting.py  htmlhelp.py  htmlwriter.py  io.py  jinja2glue.py  json.py  latexwriter.py  linkcheck.py  make_mode.py  parsers.py  patchlevel.py  project.py  pygments_styles.py  quickstart.py  (+12 more)
tests/: conftest.py  coverage.py  ext_napoleon_docstring_data.py  ext_napoleon_pep526_data_google.py  ext_napoleon_pep526_data_numpy.py  path.py  run.py  test_addnodes.py  test_api_translator.py  test_apidoc.py  test_application.py  test_autodoc.py  test_autodoc_py35.py  test_autosummary.py  test_build.py  test_build_applehelp.py  test_build_base.py  test_build_changes.py  test_build_devhelp.py  test_build_dirhtml.py  test_build_epub.py  test_build_epub2.py  test_build_gettext.py  test_build_html.py  test_build_html5.py  test_build_htmlhelp.py  test_build_latex.py  test_build_linkcheck.py  test_build_manpage.py  test_build_qthelp.py  test_build_qthelp_leanid.py  test_build_texinfo.py  test_build_text.py  test_build_wikisyntax.py  test_builder.py  test_catalogs.py  test_cmdline.py  test_command_line.py  test_config.py  test_config_trim_doctest_flags.py  (+135 more)
utils/: CHANGES_template  CHANGES_template.rst  babel_runner.py  bump_docker.py  bump_docker.sh  bump_version.py  check_sources.py  checks.py  convert.py  convert_attestations.py  doclinter.py  generate_js_fixtures.py  generate_snowball.py  jssplitter_generator.py  pylintrc  reindent.py  release-checklist  release-checklist.rst
(+2560 files in other folders)
